Fix character error, add dark mode heroImage blend mode

--- a/src/app/(marketing)/Landing.module.css
+++ b/src/app/(marketing)/Landing.module.css
@@ -171,6 +171,9 @@
 .heroImage {
   mix-blend-mode: difference;
 }
+.dark .heroImage {
+  mix-blend-mode: color-dodge;
+}
 .productsSection {
   border-bottom: 1px dashed var(--gray-9);
   border-top: 1px dashed var(--gray-9);
